# spinmaster

./: .gitignore  README.md  aiml_engineering_competency_mapping.md  cloudbuild.yaml  competency_mapping.md  deploy_all.sh  main.tf  outputs.tf  pyproject.toml  rollback_all.sh  variables.tf
.gemini/: AGENTS.md
add_agent_scripts/: auto_register_agents.sh  register_agents.sh
image_Agent/: agent.py  image_agent.evalset.json  requirements.txt  test_image_agent_eval.py  test_image_agent_logic.py
video-translator-service/: Dockerfile  Dockerfile-2  deploy.sh  instructions.txt  main-2.py  main.py  requirements.txt  requirments-2.txt  test_main.py
video_agent/: agent.py  new_agent.py  test_config.json  test_video_agent_eval.py  test_video_agent_logic.py  video_agent.evalset.json
